--- a/src/main/webapp/Signup.html
+++ b/src/main/webapp/Signup.html
@@ -5,16 +5,15 @@
 <title>Signup</title>
 </head>
 <body>
-<h2>Signup</h2>
+	<h2>Signup</h2>
 
 
-<form method="post" action="SignupServlet">
-	FirstName: <input type="text" name="firstName"/><br><br> 
-	Email :<input type="text" name="email"/><br><br>
-	Password: <input type="password" name="password"/><br><br>
-
-	<input type="submit" value="Signup">
-</form>
+	<form method="post" action="SignupServlet">
+		FirstName: <input type="text" name="firstName" /><br>
+		<br> Email :<input type="text" name="email" /><br>
+		<br> Password: <input type="password" name="password" /><br>
+		<br> <input type="submit" value="Signup">
+	</form>
 
 </body>
 
